<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:paddingTop="40dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Fragments.InstaGro">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/Top_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/location_icon"
                android:layout_width="16dp"
                android:layout_height="22dp"
                android:src="@drawable/location"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/orange" />

            <TextView
                android:id="@+id/message_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/mess"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/location_icon"
                app:layout_constraintStart_toEndOf="@id/location_icon"
                app:layout_constraintTop_toTopOf="@id/location_icon" />

            <ImageView
                android:id="@+id/dropdown_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:src="@drawable/baseline_keyboard_arrow_down_24"
                app:layout_constraintBottom_toBottomOf="@id/message_title"
                app:layout_constraintStart_toEndOf="@id/message_title"
                app:layout_constraintTop_toTopOf="@id/message_title" />

            <TextView
                android:id="@+id/message_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/mess1"
                android:textColor="#393636"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/message_title" />

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="35dp"
                android:layout_marginEnd="8dp"
                android:paddingVertical="3dp"
                app:layout_constraintBottom_toBottomOf="@id/user_icon"
                app:layout_constraintEnd_toStartOf="@id/user_icon"
                app:layout_constraintTop_toTopOf="@id/dropdown_icon"
                android:background="@drawable/rounded_background"
                >
                <TextView
                    android:id="@+id/one_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/one"
                    android:layout_centerVertical="true"
                    android:textAlignment="center"
                    android:layout_centerInParent="true"
                    android:textColor="@color/orange"
                    android:textStyle="bold"
                    android:textSize="15sp" />

            </RelativeLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="12dp"
                android:src="@drawable/burger"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/Top_layout"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="13dp"
            app:layout_constraintEnd_toEndOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/search_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Search"
                    android:paddingEnd="50dp"
                android:background="@drawable/rounded_background"
                android:paddingStart="40dp"/>
                <!-- Microphone Icon -->
                <ImageView
                    android:id="@+id/mic_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_mic"
                    android:layout_toLeftOf="@id/search_icon"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="microphone" />
                <ImageView
                    android:layout_width="2dp"
                    android:layout_height="50dp"
                    android:layout_toStartOf="@id/search_icon"
                    android:layout_toEndOf="@id/mic_icon"
                    android:layout_marginHorizontal="5dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/vector_9_wrapper"/>

                <!-- Search Icon -->
                <ImageView
                    android:id="@+id/search_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_search"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="search" />


            </RelativeLayout>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/carousel_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            android:layout_marginTop="13dp"
            app:layout_constraintTop_toBottomOf="@id/recycler_view"
            android:layout_marginHorizontal="16dp">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:overScrollMode="never" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/dots_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="8dp"
            android:gravity="center"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/carousel_card"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/popular_brands_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popular_brands"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="13dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dots_container" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/popular_brands_recycler_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="5dp"
            android:scrollbars="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/popular_brands_title" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:layout_marginTop="13dp"
            android:paddingEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/popular_brands_recycler_view"
            tools:ignore="RtlSymmetry">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/rewards_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/your_ordering_rewards"
                    android:textColor="@color/gray_text_color"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/icon1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@null"
                    android:src="@drawable/tckt" />

                <View
                    android:layout_width="40dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:background="@color/gray_text_color" />

                <ImageView
                    android:id="@+id/icon2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@null"
                    android:src="@drawable/keye" />

                <View
                    android:layout_width="40dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:background="@color/gray_text_color" />

                <ImageView
                    android:id="@+id/icon3"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@null"
                    android:src="@drawable/keye" />

                <View
                    android:layout_width="40dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:background="@color/gray_text_color" />

                <ImageView
                    android:id="@+id/icon4"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@null"
                    android:src="@drawable/keye" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="0dp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/mind"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/linearLayout">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/what_s_on_your_mind"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </HorizontalScrollView>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:layout_constraintTop_toBottomOf="@+id/mind" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
